--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,18 +3,11 @@ name = "global_state"
 version = "0.1.0"
 edition = "2021"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 [lib]
-#name = "global_state"
 crate-type = ["cdylib"]
 
-#[[bin]]
-#name = "main"
-#path = "src/bin/main.rs"
-
 [dependencies]
-mlua = { version = "0.9.8", features = ["lua53", "serialize", "vendored", "send"] }
-#mlua = { version = "0.9.8", features = ["lua53", "vendored"] }
+mlua = { version = "0.9.8", features = ["lua53", "serialize", "vendored", "send"] } # TODO: remove send if not going to attempt cross thread stuff
 once_cell = "1.19.0"
 serde = { version = "1.0.171" }
 serde_json = "1.0.117"
