update weavedrive integration

--- a/.cargo/config.toml
+++ b/.cargo/config.toml
@@ -7,15 +7,21 @@ rustflags = ["""-Clink-args=-rdynamic"""]
 [target.wasm32-unknown-emscripten]
 linker = "emcc"
 ar = "emar"
+
+#  -Lbuild/aolibc -l:aolibc.a
 rustflags = [
-  """-Clink-args=-O0
-  -sALLOW_MEMORY_GROWTH=1 -sINITIAL_MEMORY=134217728 -sMAXIMUM_MEMORY=536870912
-  -sWASM=1 -sMODULARIZE=1 -sDETERMINISTIC=1 -sNODERAWFS=0
-  -I/lua-5.3.4/src
-  /lua-5.3.4/src/liblua.a
-  -lm -ldl
+  """-Clink-args=-O3 -g
+  -Lbuild/aolibc -l:aolibc.a
+  -sASYNCIFY=1 -sALLOW_MEMORY_GROWTH=1 -sINITIAL_MEMORY=134217728 -sMAXIMUM_MEMORY=536870912
+  -sWASM=1 -sMODULARIZE=1 -sDETERMINISTIC=1 -sNODERAWFS=0 -sFORCE_FILESYSTEM=1
+  -lm -ldl -msimd128
   -o outtest.js
-  -sEXPORTED_RUNTIME_METHODS=["cwrap"] -vv
-  -sEXPORT_NAME=globalState
+  -sEXPORTED_RUNTIME_METHODS=["cwrap"]
+  --cache build/libc_objects/cache
   """,
+#  -Lbuild/libc_objects -l:custom-libc.a
+#  -nostdlib -nodefaultlibs -nostartfiles
 ]
+
+#  -sEXPORT_NAME=tfao
+#  -I/lua-5.3.4/src /lua-5.3.4/src/liblua.a
